--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://3JloyCJloHuk.github.io/tracker",
+  "homepage": "https://opanasyuk00.github.io/tracker",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
